mirrorx/macos/Runner/mirrorx_core.h

typedef struct AVBuffer AVBuffer;
typedef struct AVCodecDefault AVCodecDefault;
typedef struct AVDictionary AVDictionary;
typedef struct AVRational {
  int32_t num;
  int32_t den;
} AVRational;
typedef struct AVClass {
  const char *class_name;
  const char *(*item_name)(void *ctx);
  const struct AVOption *option;
  int32_t version;
  int32_t log_level_offset_offset;
  int32_t parent_log_context_offset;
  AVClassCategory category;
  AVClassCategory (*get_category)(void *ctx);
  int32_t (*query_ranges)(struct AVOptionRanges**, void *obj, const char *key, int32_t flags);
  void *(*child_next)(void *obj, void *prev);
  struct AVClass *(*child_class_iterate)(void **iter);
} AVClass;
typedef int32_t AVMediaType;
typedef int32_t AVPixelFormat;
typedef uint32_t AVPictureType;
typedef struct AVBufferRef {
  struct AVBuffer *buffer;
  uint8_t *data;
  uintptr_t size;
} AVBufferRef;
typedef struct AVFrameSideData {
  AVFrameSideDataType typ;
  uint8_t *data;
  uintptr_t size;
  struct AVDictionary *metadata;
  struct AVBufferRef *buf;
} AVFrameSideData;
typedef uint32_t AVColorRange;
typedef uint32_t AVColorPrimaries;
typedef uint32_t AVColorTransferCharacteristic;
typedef uint32_t AVColorSpace;
typedef uint32_t AVChromaLocation;
typedef struct AVFrame {
  uint8_t *data[AV_NUM_DATA_POINTERS];
  int32_t linesize[AV_NUM_DATA_POINTERS];
  uint8_t **extended_data;
  int32_t width;
  int32_t height;
  int32_t nb_samples;
  AVPixelFormat format;
  int32_t key_frame;
  AVPictureType pict_type;
  struct AVRational sample_aspect_ratio;
  int64_t pts;
  int64_t pkt_pts;
  struct AVRational time_base;
  int32_t coded_picture_number;
  int32_t display_picture_number;
  int32_t quality;
  void *opaque;
  int32_t repeat_pict;
  int32_t interlaced_frame;
  int32_t top_field_first;
  int32_t palette_has_changed;
  int64_t reordered_opaque;
  int32_t sample_rate;
  uint64_t channel_layout;
  struct AVBufferRef *buf[AV_NUM_DATA_POINTERS];
  struct AVBufferRef **extended_buf;
  int32_t nb_extended_buf;
  struct AVFrameSideData **side_data;
  int32_t nb_side_data;
  int32_t flags;
  AVColorRange color_range;
  AVColorPrimaries color_primaries;
  AVColorTransferCharacteristic color_trc;
  AVColorSpace color_space;
  AVChromaLocation chroma_location;
  int64_t best_effort_timestamp;
  int64_t pkt_pos;
  int64_t pkt_duration;
  struct AVDictionary *metadata;
  int32_t decode_error_flags;
  int32_t channels;
  int32_t pkt_size;
  struct AVBufferRef *hw_frames_ctx;
  struct AVBufferRef *opaque_ref;
  uintptr_t crop_top;
  uintptr_t crop_bottom;
  uintptr_t crop_left;
  uintptr_t crop_right;
  struct AVBufferRef *private_ref;
} AVFrame;
typedef uint32_t AVFieldOrder;
typedef int32_t AVSampleFormat;
typedef uint32_t AVCodecID;
typedef struct AVProfile {
  int32_t profile;
  const char *name;
} AVProfile;
typedef struct AVPacketSideData {
  uint8_t *data;
  uintptr_t size;
  AVPacketSideDataType typ;
} AVPacketSideData;
typedef struct AVPacket {
  struct AVBufferRef *buf;
  int64_t pts;
  int64_t dts;
  uint8_t *data;
  int32_t size;
  int32_t stream_index;
  int32_t flags;
  struct AVPacketSideData *side_data;
  int32_t side_data_elems;
  int64_t duration;
  int64_t pos;
  void *opaque;
  struct AVBufferRef *opaque_ref;
  struct AVRational time_base;
} AVPacket;
typedef struct AVCodecContext {
  const struct AVClass *av_class;
  int32_t log_level_offset;
  AVMediaType codec_type;
  const void *codec;
  int32_t codec_id;
  uint32_t codec_tag;
  void *priv_data;
  struct AVCodecInternal *internal;
  void *opaque;
  int64_t bit_rate;
  int32_t bit_rate_tolerance;
  int32_t global_quality;
  int32_t compression_level;
  int32_t flags;
  int32_t flags2;
  uint8_t *extradata;
  int32_t extradata_size;
  struct AVRational time_base;
  int32_t ticks_per_frame;
  int32_t delay;
  int32_t width;
  int32_t height;
  int32_t coded_width;
  int32_t coded_height;
  int32_t gop_size;
  AVPixelFormat pix_fmt;
  void (*draw_horiz_band)(struct AVCodecContext *s, const struct AVFrame *src, int32_t offset[AV_NUM_DATA_POINTERS], int32_t y, int32_t type_, int32_t height);
  AVPixelFormat (*get_format)(struct AVCodecContext *s, const AVPixelFormat *fmt);
  int32_t max_b_frames;
  float b_quant_factor;
  float b_quant_offset;
  int32_t has_b_frames;
  float i_quant_factor;
  float i_quant_offset;
  float lumi_masking;
  float temporal_cplx_masking;
  float spatial_cplx_masking;
  float p_masking;
  float dark_masking;
  int32_t slice_count;
  int32_t *slice_offset;
  struct AVRational sample_aspect_ratio;
  int32_t me_cmp;
  int32_t me_sub_cmp;
  int32_t mb_cmp;
  int32_t ildct_cmp;
  int32_t dia_size;
  int32_t last_predictor_count;
  int32_t me_pre_cmp;
  int32_t pre_dia_size;
  int32_t me_subpel_quality;
  int32_t me_range;
  int32_t slice_flags;
  int32_t mb_decision;
  uint16_t *intra_matrix;
  uint16_t *inter_matrix;
  int32_t intra_dc_precision;
  int32_t skip_top;
  int32_t skip_bottom;
  int32_t mb_lmin;
  int32_t mb_lmax;
  int32_t bidir_refine;
  int32_t keyint_min;
  int32_t refs;
  int32_t mv0_threshold;
  AVColorPrimaries color_primaries;
  AVColorTransferCharacteristic color_trc;
  AVColorSpace colorspace;
  AVColorRange color_range;
  AVChromaLocation chroma_sample_location;
  int32_t slices;
  AVFieldOrder field_order;
  int32_t sample_rate;
  int32_t channels;
  AVSampleFormat sample_fmt;
  int32_t frame_size;
  int32_t frame_number;
  int32_t block_align;
  int32_t cutoff;
  uint64_t channel_layout;
  uint64_t request_channel_layout;
  AVAudioServiceType audio_service_type;
  AVSampleFormat request_sample_fmt;
  int32_t (*get_buffer2)(struct AVCodecContext *s, struct AVFrame *frame, int32_t flags);
  float qcompress;
  float qblur;
  int32_t qmin;
  int32_t qmax;
  int32_t max_qdiff;
  int32_t rc_buffer_size;
  int32_t rc_override_count;
  struct RcOverride *rc_override;
  int64_t rc_max_rate;
  int64_t rc_min_rate;
  float rc_max_available_vbv_use;
  float rc_min_vbv_overflow_use;
  int32_t rc_initial_buffer_occupancy;
  int32_t trellis;
  char *stats_out;
  char *stats_in;
  int32_t workaround_bugs;
  int32_t strict_std_compliance;
  int32_t error_concealment;
  int32_t debug;
  int32_t err_recognition;
  int64_t reordered_opaque;
  const struct AVHWAccel *hwaccel;
  void *hwaccel_context;
  uint64_t error[AV_NUM_DATA_POINTERS];
  int32_t dct_algo;
  int32_t idct_algo;
  int32_t bits_per_coded_sample;
  int32_t bits_per_raw_sample;
  int32_t lowres;
  int32_t thread_count;
  int32_t thread_type;
  int32_t active_thread_type;
  int32_t thread_safe_callbacks;
  int32_t (*execute)(struct AVCodecContext *c, void (*func)(struct AVCodecContext*, void*), void *arg2, int32_t *ret, int32_t count, int32_t size);
  int32_t (*execute2)(struct AVCodecContext *c, void (*func)(struct AVCodecContext*, void*, int32_t, int32_t), void *arg2, int32_t *ret, int32_t count);
  int32_t nsse_wight;
  int32_t profile;
  int32_t level;
  AVDiscard skip_loop_filter;
  AVDiscard skip_idct;
  AVDiscard skip_frame;
  uint8_t *subtitle_header;
  int32_t subtitle_header_size;
  int32_t initial_padding;
  struct AVRational framerate;
  AVPixelFormat sw_pix_fmt;
  struct AVRational pkt_timebase;
  const struct AVCodecDescriptor *codec_descriptor;
  int64_t pts_correction_num_faulty_pts;
  int64_t pts_correction_num_faulty_dts;
  int64_t pts_correction_last_pts;
  int64_t pts_correction_last_dts;
  char *sub_charenc;
  int32_t sub_charenc_mode;
  int32_t skip_alpha;
  int32_t seek_preroll;
  int32_t debug_mv;
  uint8_t *chroma_intra_matrix;
  uint8_t *dump_separator;
  char *codec_whitelist;
  uint32_t properties;
  struct AVPacketSideData *coded_side_data;
  int32_t nb_codec_side_data;
  struct AVBufferRef *hw_frames_ctx;
  int32_t sub_text_format;
  int32_t trailing_padding;
  int64_t max_pixels;
  struct AVBufferRef *hw_device_ctx;
  int32_t hwaccel_flags;
  int32_t apply_cropping;
  int32_t extra_hw_frames;
  int32_t discard_damaged_percentage;
  int64_t max_samples;
  int32_t export_side_data;
  int32_t (*get_encode_buffer)(struct AVCodecContext *s, struct AVPacket *pkt, int32_t flags);
} AVCodecContext;
typedef uint32_t AVPictureStructure;
typedef struct AVCodecParserContext {
  void *priv_data;
  const void *parser;
  int64_t frame_offset;
  int64_t cur_offset;
  int64_t next_frame_offset;
  AVPixelFormat pict_type;
  int32_t repeat_pict;
  int64_t pts;
  int64_t dts;
  int64_t last_pts;
  int64_t last_dts;
  int32_t fetch_timestamp;
  int32_t cur_frame_start_index;
  int64_t cur_frame_offset[AV_PARSER_PTS_NB];
  int64_t cur_frame_pts[AV_PARSER_PTS_NB];
  int64_t cur_frame_dts[AV_PARSER_PTS_NB];
  int32_t flags;
  int64_t offset;
  int64_t cur_frame_end[AV_PARSER_PTS_NB];
  int32_t key_frame;
  int32_t dts_sync_point;
  int32_t dts_ref_dts_delta;
  int32_t pts_dts_delta;
  int64_t cur_frame_pos[AV_PARSER_PTS_NB];
  int64_t pos;
  int64_t last_pos;
  int32_t duration;
  AVFieldOrder field_order;
  AVPictureStructure picture_structure;
  int32_t output_picture_number;
  int32_t width;
  int32_t height;
  int32_t coded_width;
  int32_t coded_height;
  int32_t format;
} AVCodecParserContext;
typedef struct AVSubtitle {
  uint16_t format;
  uint32_t start_display_time;
  uint32_t end_display_time;
  uint32_t num_rects;
  struct AVSubtitleRect **rects;
  int64_t pts;
} AVSubtitle;
typedef struct AVCodec {
  const char *name;
  const char *long_name;
  AVMediaType type_;
  AVCodecID id;
  int32_t capabilities;
  uint8_t max_lowres;
  const struct AVRational *supported_framerates;
  const AVPixelFormat *pix_fmts;
  const int32_t *supported_samplerates;
  const AVSampleFormat *sample_fmts;
  const uint64_t *channel_layouts;
  const struct AVClass *priv_class;
  const struct AVProfile *profiles;
  const char *wrapper_name;
  int32_t caps_internal;
  int32_t priv_data_size;
  int32_t (*update_thread_context)(struct AVCodecContext *dst, const struct AVCodecContext *src);
  int32_t (*update_thread_context_for_user)(struct AVCodecContext *dst, const struct AVCodecContext *src);
  const struct AVCodecDefault *defaults;
  void (*init_static_data)(struct AVCodec *codec);
  int32_t (*init)(struct AVCodecContext *codec);
  int32_t (*encode_sub)(struct AVCodecContext *avctx, uint8_t *buf, int32_t buf_size, const struct AVSubtitle *sub);
  int32_t (*encode2)(struct AVCodecContext *avctx, struct AVPacket *avpkt, const struct AVFrame *frame, int32_t *got_packet_ptr);
  int32_t (*decode)(struct AVCodecContext *avctx, void *outdata, int32_t *got_frame_ptr, struct AVPacket *avpkt);
  int32_t (*close)(struct AVCodecContext *avctx);
  int32_t (*receive_packet)(struct AVCodecContext *avctx, struct AVPacket *avpkt);
  int32_t (*receive_frame)(struct AVCodecContext *avctx, struct AVFrame *frame);
  int32_t (*flush)(struct AVCodecContext *avctx);
  const char *bsfs;
  const void *const *hw_configs;
  const uint32_t *codec_tags;
} AVCodec;
typedef uint32_t AVHWDeviceType;
typedef struct AVCodecHWConfig {
  AVPixelFormat pix_fmt;
  int32_t methods;
  AVHWDeviceType device_type;
} AVCodecHWConfig;
typedef int64_t CMTimeValue;
typedef int32_t CMTimeScale;
typedef uint32_t CMTimeFlags;
typedef int64_t CMTimeEpoch;
typedef struct CMTime {
  CMTimeValue value;
  CMTimeScale time_scale;
  CMTimeFlags flags;
  CMTimeEpoch epoch;
} CMTime;
typedef void *CMSampleBufferRef;
typedef struct CMSampleTimingInfo {
  struct CMTime duration;
  struct CMTime presentation_timestamp;
  struct CMTime decode_timestamp;
} CMSampleTimingInfo;
typedef void *CVImageBufferRef;
extern struct AVCodecParserContext *av_parser_init(uint32_t codec_id);
extern const struct AVCodec *avcodec_find_encoder_by_name(const char *name);
extern const struct AVCodec *avcodec_find_decoder_by_name(const char *name);
extern const struct AVCodecHWConfig *avcodec_get_hw_config(const struct AVCodec *codec,
                                                           int32_t index);
extern void av_packet_free(struct AVPacket **pkt);
extern struct AVPacket *av_packet_alloc(void);
extern int32_t av_new_packet(struct AVPacket *pkt, int32_t size);
extern void av_packet_unref(struct AVPacket *pkt);
extern struct AVBufferRef *av_buffer_ref(const struct AVBufferRef *buf);
extern void av_frame_free(struct AVFrame **frame);
extern struct AVFrame *av_frame_alloc(void);
extern int32_t av_frame_get_buffer(struct AVFrame *frame, int32_t align);
extern int32_t av_frame_make_writable(struct AVFrame *frame);
extern int32_t av_hwframe_transfer_data(struct AVFrame *dst,
                                        const struct AVFrame *src,
                                        int32_t flags);
extern AVHWDeviceType av_hwdevice_iterate_types(AVHWDeviceType prev);
extern const char *av_hwdevice_get_type_name(AVHWDeviceType type_);
extern int32_t av_hwdevice_ctx_create(struct AVBufferRef **device_ctx,
                                      AVHWDeviceType type_,
                                      const char *device,
                                      void *opts,
                                      int32_t flags);
extern int32_t av_image_get_buffer_size(AVPixelFormat pix_fmt,
                                        int32_t width,
                                        int32_t height,
                                        int32_t align);
extern void av_log_set_level(int32_t level);
extern int32_t av_log_get_level(void);
extern void av_log_set_flags(int32_t arg);
extern int32_t av_log_get_flags(void);
extern int32_t av_opt_set(void *obj, const char *name, const char *val, int32_t search_flags);
extern struct CMTime CMTimeMake(int64_t value, int32_t time_scale);
extern bool CMSampleBufferIsValid(CMSampleBufferRef sample_buffer);
extern int CMSampleBufferGetSampleTimingInfo(CMSampleBufferRef sample_buffer,
                                             CFIndex sampleIndex,
                                             struct CMSampleTimingInfo *timing_info_out);
extern CVImageBufferRef CMSampleBufferGetImageBuffer(CMSampleBufferRef sample_buffer);