mirrorx/lib/env/sdk/mirrorx_core.dart


  ffi.Pointer<AVCodecParserContext> av_parser_init(
    int codec_id,
  ) {
    return _av_parser_init(
      codec_id,
    );
  }

  late final _av_parser_initPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<AVCodecParserContext> Function(
              ffi.Uint32)>>('av_parser_init');
  late final _av_parser_init = _av_parser_initPtr
      .asFunction<ffi.Pointer<AVCodecParserContext> Function(int)>();

  ffi.Pointer<AVCodec> avcodec_find_encoder_by_name(
    ffi.Pointer<ffi.Int8> name,
  ) {
    return _avcodec_find_encoder_by_name(
      name,
    );
  }

  late final _avcodec_find_encoder_by_namePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<AVCodec> Function(
              ffi.Pointer<ffi.Int8>)>>('avcodec_find_encoder_by_name');
  late final _avcodec_find_encoder_by_name = _avcodec_find_encoder_by_namePtr
      .asFunction<ffi.Pointer<AVCodec> Function(ffi.Pointer<ffi.Int8>)>();

  ffi.Pointer<AVCodec> avcodec_find_decoder_by_name(
    ffi.Pointer<ffi.Int8> name,
  ) {
    return _avcodec_find_decoder_by_name(
      name,
    );
  }

  late final _avcodec_find_decoder_by_namePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<AVCodec> Function(
              ffi.Pointer<ffi.Int8>)>>('avcodec_find_decoder_by_name');
  late final _avcodec_find_decoder_by_name = _avcodec_find_decoder_by_namePtr
      .asFunction<ffi.Pointer<AVCodec> Function(ffi.Pointer<ffi.Int8>)>();

  ffi.Pointer<AVCodecHWConfig> avcodec_get_hw_config(
    ffi.Pointer<AVCodec> codec,
    int index,
  ) {
    return _avcodec_get_hw_config(
      codec,
      index,
    );
  }

  late final _avcodec_get_hw_configPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<AVCodecHWConfig> Function(
              ffi.Pointer<AVCodec>, ffi.Int32)>>('avcodec_get_hw_config');
  late final _avcodec_get_hw_config = _avcodec_get_hw_configPtr.asFunction<
      ffi.Pointer<AVCodecHWConfig> Function(ffi.Pointer<AVCodec>, int)>();

  void av_packet_free(
    ffi.Pointer<ffi.Pointer<AVPacket>> pkt,
  ) {
    return _av_packet_free(
      pkt,
    );
  }

  late final _av_packet_freePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Pointer<AVPacket>>)>>('av_packet_free');
  late final _av_packet_free = _av_packet_freePtr
      .asFunction<void Function(ffi.Pointer<ffi.Pointer<AVPacket>>)>();

  ffi.Pointer<AVPacket> av_packet_alloc() {
    return _av_packet_alloc();
  }

  late final _av_packet_allocPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<AVPacket> Function()>>(
          'av_packet_alloc');
  late final _av_packet_alloc =
      _av_packet_allocPtr.asFunction<ffi.Pointer<AVPacket> Function()>();

  int av_new_packet(
    ffi.Pointer<AVPacket> pkt,
    int size,
  ) {
    return _av_new_packet(
      pkt,
      size,
    );
  }

  late final _av_new_packetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<AVPacket>, ffi.Int32)>>('av_new_packet');
  late final _av_new_packet =
      _av_new_packetPtr.asFunction<int Function(ffi.Pointer<AVPacket>, int)>();

  void av_packet_unref(
    ffi.Pointer<AVPacket> pkt,
  ) {
    return _av_packet_unref(
      pkt,
    );
  }

  late final _av_packet_unrefPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<AVPacket>)>>(
          'av_packet_unref');
  late final _av_packet_unref =
      _av_packet_unrefPtr.asFunction<void Function(ffi.Pointer<AVPacket>)>();

  ffi.Pointer<AVBufferRef> av_buffer_ref(
    ffi.Pointer<AVBufferRef> buf,
  ) {
    return _av_buffer_ref(
      buf,
    );
  }

  late final _av_buffer_refPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<AVBufferRef> Function(
              ffi.Pointer<AVBufferRef>)>>('av_buffer_ref');
  late final _av_buffer_ref = _av_buffer_refPtr.asFunction<
      ffi.Pointer<AVBufferRef> Function(ffi.Pointer<AVBufferRef>)>();

  void av_frame_free(
    ffi.Pointer<ffi.Pointer<AVFrame>> frame,
  ) {
    return _av_frame_free(
      frame,
    );
  }

  late final _av_frame_freePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Pointer<AVFrame>>)>>('av_frame_free');
  late final _av_frame_free = _av_frame_freePtr
      .asFunction<void Function(ffi.Pointer<ffi.Pointer<AVFrame>>)>();

  ffi.Pointer<AVFrame> av_frame_alloc() {
    return _av_frame_alloc();
  }

  late final _av_frame_allocPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<AVFrame> Function()>>(
          'av_frame_alloc');
  late final _av_frame_alloc =
      _av_frame_allocPtr.asFunction<ffi.Pointer<AVFrame> Function()>();

  int av_frame_get_buffer(
    ffi.Pointer<AVFrame> frame,
    int align,
  ) {
    return _av_frame_get_buffer(
      frame,
      align,
    );
  }

  late final _av_frame_get_bufferPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<AVFrame>, ffi.Int32)>>('av_frame_get_buffer');
  late final _av_frame_get_buffer = _av_frame_get_bufferPtr
      .asFunction<int Function(ffi.Pointer<AVFrame>, int)>();

  int av_frame_make_writable(
    ffi.Pointer<AVFrame> frame,
  ) {
    return _av_frame_make_writable(
      frame,
    );
  }

  late final _av_frame_make_writablePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<AVFrame>)>>(
          'av_frame_make_writable');
  late final _av_frame_make_writable = _av_frame_make_writablePtr
      .asFunction<int Function(ffi.Pointer<AVFrame>)>();

  int av_hwframe_transfer_data(
    ffi.Pointer<AVFrame> dst,
    ffi.Pointer<AVFrame> src,
    int flags,
  ) {
    return _av_hwframe_transfer_data(
      dst,
      src,
      flags,
    );
  }

  late final _av_hwframe_transfer_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AVFrame>, ffi.Pointer<AVFrame>,
              ffi.Int32)>>('av_hwframe_transfer_data');
  late final _av_hwframe_transfer_data =
      _av_hwframe_transfer_dataPtr.asFunction<
          int Function(ffi.Pointer<AVFrame>, ffi.Pointer<AVFrame>, int)>();

  int av_hwdevice_iterate_types(
    int prev,
  ) {
    return _av_hwdevice_iterate_types(
      prev,
    );
  }

  late final _av_hwdevice_iterate_typesPtr =
      _lookup<ffi.NativeFunction<AVHWDeviceType Function(AVHWDeviceType)>>(
          'av_hwdevice_iterate_types');
  late final _av_hwdevice_iterate_types =
      _av_hwdevice_iterate_typesPtr.asFunction<int Function(int)>();

  ffi.Pointer<ffi.Int8> av_hwdevice_get_type_name(
    int type_,
  ) {
    return _av_hwdevice_get_type_name(
      type_,
    );
  }

  late final _av_hwdevice_get_type_namePtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Int8> Function(AVHWDeviceType)>>(
      'av_hwdevice_get_type_name');
  late final _av_hwdevice_get_type_name = _av_hwdevice_get_type_namePtr
      .asFunction<ffi.Pointer<ffi.Int8> Function(int)>();

  int av_hwdevice_ctx_create(
    ffi.Pointer<ffi.Pointer<AVBufferRef>> device_ctx,
    int type_,
    ffi.Pointer<ffi.Int8> device,
    ffi.Pointer<ffi.Void> opts,
    int flags,
  ) {
    return _av_hwdevice_ctx_create(
      device_ctx,
      type_,
      device,
      opts,
      flags,
    );
  }

  late final _av_hwdevice_ctx_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<ffi.Pointer<AVBufferRef>>,
              AVHWDeviceType,
              ffi.Pointer<ffi.Int8>,
              ffi.Pointer<ffi.Void>,
              ffi.Int32)>>('av_hwdevice_ctx_create');
  late final _av_hwdevice_ctx_create = _av_hwdevice_ctx_createPtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<AVBufferRef>>, int,
          ffi.Pointer<ffi.Int8>, ffi.Pointer<ffi.Void>, int)>();

  int av_image_get_buffer_size(
    int pix_fmt,
    int width,
    int height,
    int align,
  ) {
    return _av_image_get_buffer_size(
      pix_fmt,
      width,
      height,
      align,
    );
  }

  late final _av_image_get_buffer_sizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(AVPixelFormat, ffi.Int32, ffi.Int32,
              ffi.Int32)>>('av_image_get_buffer_size');
  late final _av_image_get_buffer_size = _av_image_get_buffer_sizePtr
      .asFunction<int Function(int, int, int, int)>();

  void av_log_set_level(
    int level,
  ) {
    return _av_log_set_level(
      level,
    );
  }

  late final _av_log_set_levelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int32)>>(
          'av_log_set_level');
  late final _av_log_set_level =
      _av_log_set_levelPtr.asFunction<void Function(int)>();

  int av_log_get_level() {
    return _av_log_get_level();
  }

  late final _av_log_get_levelPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>('av_log_get_level');
  late final _av_log_get_level =
      _av_log_get_levelPtr.asFunction<int Function()>();

  void av_log_set_flags(
    int arg,
  ) {
    return _av_log_set_flags(
      arg,
    );
  }

  late final _av_log_set_flagsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int32)>>(
          'av_log_set_flags');
  late final _av_log_set_flags =
      _av_log_set_flagsPtr.asFunction<void Function(int)>();

  int av_log_get_flags() {
    return _av_log_get_flags();
  }

  late final _av_log_get_flagsPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>('av_log_get_flags');
  late final _av_log_get_flags =
      _av_log_get_flagsPtr.asFunction<int Function()>();

  int av_opt_set(
    ffi.Pointer<ffi.Void> obj,
    ffi.Pointer<ffi.Int8> name,
    ffi.Pointer<ffi.Int8> val,
    int search_flags,
  ) {
    return _av_opt_set(
      obj,
      name,
      val,
      search_flags,
    );
  }

  late final _av_opt_setPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Int8>,
              ffi.Pointer<ffi.Int8>, ffi.Int32)>>('av_opt_set');
  late final _av_opt_set = _av_opt_setPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Int8>,
          ffi.Pointer<ffi.Int8>, int)>();

  CMTime CMTimeMake(
    int value,
    int time_scale,
  ) {
    return _CMTimeMake(
      value,
      time_scale,
    );
  }

  late final _CMTimeMakePtr =
      _lookup<ffi.NativeFunction<CMTime Function(ffi.Int64, ffi.Int32)>>(
          'CMTimeMake');
  late final _CMTimeMake =
      _CMTimeMakePtr.asFunction<CMTime Function(int, int)>();

  bool CMSampleBufferIsValid(
    CMSampleBufferRef sample_buffer,
  ) {
    return _CMSampleBufferIsValid(
          sample_buffer,
        ) !=
        0;
  }

  late final _CMSampleBufferIsValidPtr =
      _lookup<ffi.NativeFunction<ffi.Uint8 Function(CMSampleBufferRef)>>(
          'CMSampleBufferIsValid');
  late final _CMSampleBufferIsValid =
      _CMSampleBufferIsValidPtr.asFunction<int Function(CMSampleBufferRef)>();

  int CMSampleBufferGetSampleTimingInfo(
    CMSampleBufferRef sample_buffer,
    int sampleIndex,
    ffi.Pointer<CMSampleTimingInfo> timing_info_out,
  ) {
    return _CMSampleBufferGetSampleTimingInfo(
      sample_buffer,
      sampleIndex,
      timing_info_out,
    );
  }

  late final _CMSampleBufferGetSampleTimingInfoPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int32 Function(CMSampleBufferRef, ffi.Int32,
                  ffi.Pointer<CMSampleTimingInfo>)>>(
      'CMSampleBufferGetSampleTimingInfo');
  late final _CMSampleBufferGetSampleTimingInfo =
      _CMSampleBufferGetSampleTimingInfoPtr.asFunction<
          int Function(
              CMSampleBufferRef, int, ffi.Pointer<CMSampleTimingInfo>)>();

  CVImageBufferRef CMSampleBufferGetImageBuffer(
    CMSampleBufferRef sample_buffer,
  ) {
    return _CMSampleBufferGetImageBuffer(
      sample_buffer,
    );
  }
